# Coursera_Capstone

./: .gitignore  01_hello_capstone.ipynb  02_Intro_finding_venue.ipynb  03_TorontoNeighborhood-Copy1.ipynb  03_TorontoNeighborhood.ipynb  04_getLatLon_neighborhood.ipynb  05_Neighborhood_Toronto.ipynb  06_BattleOfNeighborhood_wk1.ipynb  DS0701EN-2-2-1-Foursquare-API-py-v2.0.ipynb  DS0701EN-3-3-1-Clustering-k-means-py-v1.0.ipynb  DS0701EN-3-3-2-Neighborhoods-New-York-py-v1.0.ipynb  README.md  capstone_project.txt  pyproject.toml  toranto_pc_latlon.csv  toranto_postal_codes.csv
data/: toronto-2016.csv  toronto_neighborhoods.csv
