[tool.poetry]
name = "coursera_capstone"
version = "0.1.0"
description = "Coursera Capstone project"
authors = ["Arun Kr. Khattri <arunkhattri@outlook.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.2.5"
numpy = "^1.21.0"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
scikit-learn = "^0.24.2"
scipy = "^1.7.0"
jupyterlab = "^3.0.16"
ipython = "^7.24.1"
geopy = "^2.1.0"
folium = "^0.12.1"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
mypy = "^0.910"
pyflakes = "^2.3.1"
pylint = "^2.8.3"
isort = "^5.9.1"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
